<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ubuntu.homework03.TriviaActivity">

    <Button
        android:id="@+id/button_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        android:text="@string/quit"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="431dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageView2"
        android:layout_marginBottom="28dp"
        android:text="@string/next"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="431dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button2"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:shadowColor="@android:color/darker_gray"
        android:text="@string/stats"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="390dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="18dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        android:layout_alignTop="@+id/imageView2"
        android:layout_marginTop="200dp"
        android:shadowColor="@android:color/darker_gray"
        android:text="TextView"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView7"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignStart="@+id/imageView2"
        android:layout_alignTop="@+id/textView"
        android:backgroundTint="@android:color/holo_blue_light"
        android:shadowColor="@android:color/darker_gray"
        android:text="Q@"
        android:textColor="@android:color/black" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="16dp" />
</RelativeLayout>
